k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fl-ingress
  namespace: fl-platform
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: fl-platform-strip-api-prefix@kubernetescrd
#    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: fl-backend
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fl-frontend
              port:
                number: 80
